2003-11-22  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (totem_playlist_create_full_path),
	(totem_playlist_add_one_mrl): add totem_playlist_create_full_path(),
	(Closes: #126558)

2003-11-20  Bastien Nocera  <hadess@hadess.net>

	* README: updated
	* data/totem.applications: added "uses_gnomevfs" entry which should
	allow Nautilus to know we can handle everything gnome-vfs does
	(Closes: #126715)
	* src/totem.c: (vol_slider_pressed_cb), (vol_slider_released_cb),
	(update_volume_sliders), (popup_hide), (totem_callback_connect):
	don't hide the popup window until we released the volume slider
	(Closes: #125791)

2003-11-20  Bastien Nocera  <hadess@hadess.net>

	* data/totem.applications:
	* data/totem.keys: added video/dv support (Closes: #126023)

2003-11-20  Bastien Nocera  <hadess@hadess.net>

	* README: upd
	* configure.in: fix build (bah!)
	* data/totem.applications:
	* data/totem.keys: added support for audio/x-ms-wax
	* src/totem-pl-parser.c:
	* src/totem-pl-parser.h:
	* src/totem-playlist.c: (totem_playlist_init): move the schemes to
	ignore out of the playlist parser, don't save playlist items with
	schemes to ignore (Closes: #125201)

2003-11-17  Bastien Nocera  <hadess@hadess.net>

	* data/totem.applications:
	* data/totem.keys: add support for .m4a files

2003-11-17  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_create_full_path): fix problems opening files
	with paths containing escape codes

2003-11-13  Bastien Nocera  <hadess@hadess.net>

	* configure.in: make the mmkeys detection work with -Werror

2003-11-10  Bastien Nocera  <hadess@hadess.net>

	* src/totem-remote.c: (totem_remote_init): show some errors when in
	debug mode and lirc fails to initialise

============ Version 0.99.8

2003-11-09  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* configure.in:
	* help/.cvsignore:
	* help/C/.cvsignore: fix build for the new manual, release 0.99.8

2003-11-09  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: