@@ -1,5 +1,12 @@
 2003-11-22  Bastien Nocera  <hadess@hadess.net>
 
+	* src/bacon-video-widget-xine.c: (xine_event_message):
+	* src/totem-playlist.c: (totem_playlist_is_media),
+	(totem_playlist_create_full_path): explode in your face you're
+	trying to playback DRM'ed crap. Die DRM, Die.
+
+2003-11-22  Bastien Nocera  <hadess@hadess.net>
+
 	* src/totem-playlist.c: (totem_playlist_create_full_path),
 	(totem_playlist_add_one_mrl): add totem_playlist_create_full_path(),
 	(Closes: #126558)
